--- a/SmebyFX_blog.Web/Views/BlogPost/BlogPost.cshtml
+++ b/SmebyFX_blog.Web/Views/BlogPost/BlogPost.cshtml
@@ -1,3 +1,3 @@
-﻿@model SmebyFX_blog.Post.Domain.Post
+﻿@model SmebyFX_blog.Models.Post
 
-@{Html.RenderPartial("_BlogPostPartial", Model);}
+@Html.Partial("_BlogPostPartial", Model)
